google sript added

--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -425,7 +425,7 @@
                         <div class="form-block w-form">
                             <h4>Sign up for free</h4>
                             <form
-                              action="https://formspree.io/f/xeogqnkp"
+                              action="https://script.google.com/macros/s/AKfycbx-RH7y7I81cI-jbqtdFN3QsW8JVFImOLU22qda8mWhP0kNmev8oZAprwmV8K-hwPcL/exec"
                               method="POST"
                               class="form"
                             >
