--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -560,28 +560,21 @@
                   body: data,
                 });
           
-                const text = await res.text();
-                let json;
-                try {
-                  json = JSON.parse(text); // try to parse JSON
-                } catch {
-                  json = { success: text.trim() === "OK" }; // fallback
-                }
-          
+                const json = await res.json(); // Will now parse correctly
                 if (json.success) {
                   successMessage.style.display = "block";
                   failMessage.style.display = "none";
                   form.reset();
                 } else {
-                  throw new Error("Submission not acknowledged");
+                  throw new Error(json.error || "Submission failed");
                 }
               } catch (err) {
-                console.error("Error:", err);
+                console.error("Fetch error:", err);
                 successMessage.style.display = "none";
                 failMessage.style.display = "block";
               }
             });
-        </script>          
+        </script>                    
         <script src="https://d3e54v103j8qbb.cloudfront.net/js/jquery-3.5.1.min.dc5e7f18c8.js?site=68078a0c458eac21a376ad48" type="text/javascript" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
         <script src="https://cdn.prod.website-files.com/68078a0c458eac21a376ad48/js/webflow.schunk.4a394eb5af8156f2.js" type="text/javascript"></script>
         <script src="https://cdn.prod.website-files.com/68078a0c458eac21a376ad48/js/webflow.schunk.9e346b74f6ea3cc6.js" type="text/javascript"></script>
